Remove Crostini apps before inserting them to clean up any residual prefs

Bug: 869734
Change-Id: Ie863c125d49c351b79f5b072bc20535a75dd8d6a
Reviewed-on: https://chromium-review.googlesource.com/1157963
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Renée Wright <rjwright@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580002}
Former-commit-id: 01baf65d5cf76e95acbe58f90f10e65bcb9fc289